--- a/public/index.html
+++ b/public/index.html
@@ -14,30 +14,32 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
     <link rel="manifest" href="favicon/site.webmanifest">
  
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+  
+ 
+
+  <!-- Open Graph Tags -->
+  <meta property="og:title" content="STEAM Varsity - Empowering the Future with STEAM Education" />
+<meta property="og:description" content="Facilitating Learning by Doing through interdisciplinary approach to STEAM(Science, Technology, Engineering, Arts and Mathematics)" />
+<meta property="og:url" content="https://www.steamvarsity.com" />
+<meta property="og:image" content="https://www.steamvarsity.com/logo/STEAM_VARSITY_Logo_2.png" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="STEAM Varsity" />
+
+  <!-- Additional tags for Twitter etc. -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Steam Varsity - Empowering the Future with STEAM Education">
+  <meta name="twitter:description" content="Facilitating Learning by Doing through interdisciplinary approach to STEAM(Science, Technology, Engineering, Arts and Mathematics)">
+  <meta name="twitter:image" content="https://www.steamvarsity.com/logo/STEAM_VARSITY_Logo_2.png">
+  
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>STEAM Varsity</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+ 
+   
   </body>
 </html>
